# WaitforFullSeconds

./: CMakeLists.txt  CWaitForFullSeconds.cpp  CWaitForFullSeconds.hpp  Makefile  deneme  helloworld  main.cpp
